[API] verify email
